--- a/security.html
+++ b/security.html
@@ -53,11 +53,11 @@
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/synergy/job/oym0afwO'>Synergy BIS Careers - Security Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/synergy/job/oym0afwO'>Synergy BIS Careers - Security Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.womenwhocode.com/jobs/5413?utm_source=hootsuite&utm_medium=&utm_term=&utm_content=&utm_campaign='>Senior Security Engineer - Remote - Mode | Women Who Code</a></h5> 
+<h5><a href='https://www.womenwhocode.com/jobs/5413?utm_source=hootsuite&utm_medium=&utm_term=&utm_content=&utm_campaign='>Senior Security Engineer - Remote - Mode | Women Who Code</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -79,7 +79,7 @@
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://frb.referrals.selectminds.com/FRBULB2ZN'>Cloud CyberSecurity Control Analyst - Technology Group - The Federal Reserve System Careers</a></h5> 
+<h5><a href='https://frb.referrals.selectminds.com/FRBULB2ZN'>Cloud CyberSecurity Control Analyst - Technology Group - The Federal Reserve System Careers</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -153,7 +153,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/omadahealth/jobs/1916406'>Job Application for Senior Security Analyst at Omada Health</a></h5> 
+<h5><a href='https://boards.greenhouse.io/omadahealth/jobs/1916406'>Job Application for Senior Security Analyst at Omada Health</a></h5> 
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -165,7 +165,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/clear/jobs/1940466'>Job Application for  Senior Security Engineer at CLEAR - Corporate</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/clear/jobs/1940466'>Job Application for  Senior Security Engineer at CLEAR - Corporate</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -213,11 +213,11 @@
 <p><span class="badge badge-light">Melbourne, Victoria, Australia</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/tri-ad/4f991877-0a5a-4217-b989-6bbb505f2656'>TRI-AD, Inc - Application Security Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tri-ad/4f991877-0a5a-4217-b989-6bbb505f2656'>TRI-AD, Inc - Application Security Engineer</a></h5> 
 <p><span class="badge badge-light">Tokyo</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/WabashValleyPowerAlliance/743999698522561-senior-cyber-security-analyst'>Wabash Valley Power Alliance Senior Cyber Security Analyst | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/WabashValleyPowerAlliance/743999698522561-senior-cyber-security-analyst'>Wabash Valley Power Alliance Senior Cyber Security Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Indianapolis, IN Indianapolis, Indiana</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -230,7 +230,7 @@ tools and services; Work closely with developers to give advice on secure?...</p
 <p><span class="badge badge-light">Burnaby</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qoZ9Vfwb&k=Job&j=odpWafws&__jvst=Employee+Referral&__jvsd=seBixgwp&__jvsc=Twitter&bid=ng4SoMwR'>Imperva Careers - Network Security Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qoZ9Vfwb&k=Job&j=odpWafws&__jvst=Employee+Referral&__jvsd=seBixgwp&__jvsc=Twitter&bid=ng4SoMwR'>Imperva Careers - Network Security Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -242,7 +242,7 @@ tools and services; Work closely with developers to give advice on secure?...</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qKd9VfwL&k=Job&j=oDfv7fwe&__jvst=Employee&__jvsd=se8Imfwa&__jvsc=Twitter&bid=np5HoMwQ'>Zensar Technologies Careers - Sr. Pre-Sales Checkpoint Security Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qKd9VfwL&k=Job&j=oDfv7fwe&__jvst=Employee&__jvsd=se8Imfwa&__jvsc=Twitter&bid=np5HoMwQ'>Zensar Technologies Careers - Sr. Pre-Sales Checkpoint Security Engineer</a></h5> 
 <p><span class="badge badge-light">Boston, Massachusetts  New York, New York</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -266,7 +266,7 @@ tools and services; Work closely with developers to give advice on secure?...</p
 <p><span class="badge badge-light">Raleigh, NC</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bandwidth/jobs/1929947'>Job Application for Junior Security Engineer at Bandwidth</a></h5> 
+<h5><a href='https://boards.greenhouse.io/bandwidth/jobs/1929947'>Job Application for Junior Security Engineer at Bandwidth</a></h5> 
 <p><span class="badge badge-light">Raleigh, NC</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -413,7 +413,7 @@ vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/grindr/jobs/1916136'>Job Application for Security Operations Engineer at Grindr</a></h5> 
+<h5><a href='https://boards.greenhouse.io/grindr/jobs/1916136'>Job Application for Security Operations Engineer at Grindr</a></h5> 
 <p><span class="badge badge-light">West Hollywood</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
